--- a/style.css
+++ b/style.css
@@ -77,16 +77,29 @@ nav {
   color: #777;
 }
 
-.error {
+.message {
   display: none;
-  background-color: red;
-  width: 450px;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: auto;
   padding: 1rem 5rem;
   border-radius: 12px;
-  color: #fff;
-  font-size: 1.2rem;
+  font-size: 1.3rem;
   margin: 0 auto;
   text-align: center;
+}
+
+.message--error {
+  background-color: #f8d7da;
+  color: #721c24;
+  border: 1px solid #f5c6cb;
+}
+
+.message--info {
+  background-color: #d1ecf1;
+  border: 1px solid #bee5eb;
+  color: #0c5460;
 }
 
 /* MAIN */
